--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,13 @@ h6 {
   }
 }
 
+
+.main-header .nav-link{
+
+  display: none !important;
+
+}
+
 @keyframes animate-preloader {
   0% {
     transform: rotate(0deg);
